tests/test_proof/good/let_in_condition.catala_en
## Test

```catala
declaration scope A:
  output x content boolean

scope A:
  definition x under condition
    let y equals true in
    y 
  consequence equals true
```

```catala-test-inline
$ catala Proof --disable_counterexamples
[RESULT] No potential errors found during the proof mode run.
```
