tests/test_proof/bad/rationals-empty.catala_en
## Test

```catala
declaration scope A:
  context x content decimal
  context y content boolean

scope A:
  definition x equals 1.
  definition y under condition x >. 1./.3. consequence equals true
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[ERROR] [A.y] This variable might return an empty error:
 --> tests/test_proof/bad/rationals-empty.catala_en
  |
6 |   context y content boolean
  |           ^
  + Test
Counterexample generation is disabled so none was generated.
```
